SUBDIRS = \
	problem_1 \
	problem_2 \
	problem_4

AM_CPPFLAGS  = -Wall
AM_CPPFLAGS += -Wextra
AM_CPPFLAGS += -Weffc++
AM_CPPFLAGS += -Wshadow
AM_CPPFLAGS += -Wabi
AM_CPPFLAGS += -Winline
AM_CPPFLAGS += -Wmissing-declarations
AM_CPPFLAGS += -Wmissing-format-attribute
AM_CPPFLAGS += -Woverloaded-virtual
AM_CPPFLAGS += -Wpacked
AM_CPPFLAGS += -Wredundant-decls
AM_CPPFLAGS += -Wsign-promo
AM_CPPFLAGS += -Wstack-protector -fstack-protector
AM_CPPFLAGS += -Wswitch-default
AM_CPPFLAGS += -Wfloat-equal
AM_CPPFLAGS += -Wcast-qual
AM_CPPFLAGS += -Wconversion