SUBDIRS = \
	problem_1 \
	problem_2 \
	problem_3 \
	problem_4

AM_CXXFLAGS  = -Wall
AM_CXXFLAGS += -Wextra
AM_CXXFLAGS += -Weffc++
AM_CXXFLAGS += -Wshadow
AM_CXXFLAGS += -Wabi
AM_CXXFLAGS += -Winline
AM_CXXFLAGS += -Wmissing-declarations
AM_CXXFLAGS += -Wmissing-format-attribute
AM_CXXFLAGS += -Woverloaded-virtual
AM_CXXFLAGS += -Wpacked
AM_CXXFLAGS += -Wredundant-decls
AM_CXXFLAGS += -Wsign-promo
AM_CXXFLAGS += -Wstack-protector -fstack-protector
AM_CXXFLAGS += -Wswitch-default
AM_CXXFLAGS += -Wfloat-equal
AM_CXXFLAGS += -Wcast-qual
AM_CXXFLAGS += -Wconversion