bin_PROGRAMS = problem_2

problem_2_SOURCES = main.cpp

problem_2_CPPFLAGS  = -I.
problem_2_CPPFLAGS += -Wall
problem_2_CPPFLAGS += -Wextra
problem_2_CPPFLAGS += -Weffc++
problem_2_CPPFLAGS += -Wshadow
problem_2_CPPFLAGS += -Wabi
problem_2_CPPFLAGS += -Winline
problem_2_CPPFLAGS += -Wmissing-declarations
problem_2_CPPFLAGS += -Wmissing-format-attribute
problem_2_CPPFLAGS += -Woverloaded-virtual
problem_2_CPPFLAGS += -Wpacked
problem_2_CPPFLAGS += -Wredundant-decls
problem_2_CPPFLAGS += -Wsign-promo
problem_2_CPPFLAGS += -Wstack-protector -fstack-protector
problem_2_CPPFLAGS += -Wswitch-default
problem_2_CPPFLAGS += -Wfloat-equal
problem_2_CPPFLAGS += -Wcast-qual
problem_2_CPPFLAGS += -Wconversion

problem_2_LDFLAGS = -pg
