bin_PROGRAMS = problem_3

problem_3_SOURCES  = src/main.cpp
problem_3_SOURCES += src/chamber.cpp
problem_3_SOURCES += src/linearchamber.cpp
problem_3_SOURCES += src/particle.cpp

problem_3_CPPFLAGS  = -I./src
#problem_3_CPPFLAGS += -std=c++11
problem_3_CPPFLAGS += -Wall
problem_3_CPPFLAGS += -Wextra
problem_3_CPPFLAGS += -Weffc++
problem_3_CPPFLAGS += -Wshadow
problem_3_CPPFLAGS += -Wabi
problem_3_CPPFLAGS += -Winline
problem_3_CPPFLAGS += -Wmissing-declarations
problem_3_CPPFLAGS += -Wmissing-format-attribute
problem_3_CPPFLAGS += -Woverloaded-virtual
problem_3_CPPFLAGS += -Wpacked
problem_3_CPPFLAGS += -Wredundant-decls
problem_3_CPPFLAGS += -Wsign-promo
problem_3_CPPFLAGS += -Wstack-protector -fstack-protector
problem_3_CPPFLAGS += -Wswitch-default
problem_3_CPPFLAGS += -Wfloat-equal
problem_3_CPPFLAGS += -Wcast-qual
problem_3_CPPFLAGS += -Wconversion